--- a/deseafio01/package.json
+++ b/deseafio01/package.json
@@ -8,6 +8,9 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
