add knex connection to database

--- a/02-api-rest-nodejs/package.json
+++ b/02-api-rest-nodejs/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "fastify": "^4.21.0"
+    "fastify": "^4.21.0",
+    "knex": "^2.5.1",
+    "sqlite3": "^5.1.6"
   }
 }
