--- a/02-api-rest-nodejs/package.json
+++ b/02-api-rest-nodejs/package.json
@@ -35,6 +35,7 @@
     "typescript": "*"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.0.4",
     "dotenv": "^16.3.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "fastify": "^4.21.0",
