--- a/desafio02-DailyDiet/package.json
+++ b/desafio02-DailyDiet/package.json
@@ -12,6 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
     "tsx": "^3.12.7",
     "typescript": "^5.2.2"
   },
