--- a/desafio02-DailyDiet/package.json
+++ b/desafio02-DailyDiet/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src --ext .ts --fix",
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
