--- a/03-api-solid/package.json
+++ b/03-api-solid/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.9",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "6.7.0",
+    "@typescript-eslint/parser": "6.7.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "39.0.0",
     "eslint-plugin-import": "^2.25.2",
