--- a/03-api-solid/package.json
+++ b/03-api-solid/package.json
@@ -21,11 +21,13 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "prisma": "5.3.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.8",
     "typescript": "*"
   },
   "dependencies": {
+    "@prisma/client": "5.3.1",
     "dotenv": "16.3.1",
     "fastify": "^4.22.2",
     "zod": "3.22.2"
