--- a/03-api-solid/package.json
+++ b/03-api-solid/package.json
@@ -4,7 +4,8 @@
   "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build"
@@ -25,7 +26,9 @@
     "prisma": "5.3.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.8",
-    "typescript": "*"
+    "typescript": "*",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6"
   },
   "dependencies": {
     "@prisma/client": "5.3.1",
