--- a/03-api-solid/package.json
+++ b/03-api-solid/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build"
@@ -18,6 +19,7 @@
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
+    "@vitest/coverage-v8": "0.34.6",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "39.0.0",
     "eslint-plugin-import": "^2.25.2",
