--- a/03-api-solid/package.json
+++ b/03-api-solid/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@prisma/client": "5.3.1",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "fastify": "^4.22.2",
     "zod": "3.22.2"
